# reminapp

backend/: config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1946d3b90328_telegram_id.py  28eddb73be5a_new_class_for_frovider_to_be_able_to_.py  5fefaeb19a30_clients_model_updated.py  c667890dbdf5_on_delete_cascade_in_template_and_.py  ed8d6ab2d12e_provider_id_add_to_appointment_model.py  f44517750bbb_business_name.py
backend/src/appointment/models/: appointment_models.py
backend/src/appointment/routers/: appointment_router.py
backend/src/appointment/schemas/: Appointment_Schemas.py
backend/src/appointment/services/: AppointmentServices.py
backend/src/auth/models/: auth_model.py
backend/src/auth/routers/: user_router.py
backend/src/auth/schemas/: user_schemas.py
backend/src/auth/services/: AuthService.py  UserService.py
backend/src/client/models/: client_model.py
backend/src/client/routers/: client_router.py
backend/src/client/schemas/: client_schemas.py
backend/src/client/services/: ClientService.py
backend/src/email_sender/: email_sender.py
backend/src/provider/models/: provider_models.py
backend/src/provider/routers/: provider_router.py  template_router.py
backend/src/provider/schemas/: provider_schemas.py
backend/src/provider/services/: ProviderService.py  TemplateService.py
backend/src/sms_sender/: sms_sender.py
backend/src/stripe/: __init__.py  stripe_router.py  stripe_service.py
backend/tests/: test_health.py
frontend/: README.md  README_API_ENDPOINTS.md  (+6 more)
(+47 files in other folders)
