[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "dmitrii",email = "mathmtit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "uvicorn[standart] (>=0.35.0,<0.36.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "clerk-backend-api (>=3.2.1,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "twilio (>=9.9.1,<10.0.0)",
    "stripe (>=14.1.0,<15.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
